# rustforce

./: .gitignore  Cargo.toml  README.md
examples/: create.rs  debug_logs.rs  describe.rs  destroy.rs  execute_anonymous.rs  find.rs  login.rs  query.rs  search.rs  trace_flags.rs  update.rs  upsert.rs  versions.rs
src/: Xml.rs  access_token.rs  client.rs  client_2.rs  errors.rs  lib.rs  response.rs  xml.rs
src/client/: bulk_api.rs  bulk_api_v2.rs  client.rs  mod.rs  rest_api.rs  tooling_api.rs
src/examples/: login_with_credentials.rs
src/responses/: all_jobs_response.rs  bulk_api_v1_response.rs  bulk_api_v2_response.rs  bulk_api_v2_state_change_response.rs  bulk_api_v2_status_response.rs  create_response.rs  describe_global_response.rs  describe_global_sobject_response.rs  describe_response.rs  error_response.rs  execute_anonymous_response.rs  job_status_response.rs  mod.rs  query_response.rs  register_response.rs  search_response.rs  token_error_response.rs  token_response.rs  upsert_response.rs  version_response.rs
