[package]
name = "rustforce"
version = "0.3.0"
authors = ["tzmfreedom <makoto_tajitsu@hotmail.co.jp>", "tance77 <lancet@myoutdesk.com>"]
license = "MIT"
description = "Salesforce REST API Client"
documentation = "https://docs.rs/rustforce"
homepage = "https://github.com/tance77/rustforce"
repository = "https://github.com/tance77/rustforce"
readme = "README.md"
keywords = ["Salesforce", "API"]
categories = ["web-programming"]
edition = "2021"
rust-version = "1.63"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.57"
roxmltree = "0.20.0"
log = "0.4.20"

[dev-dependencies]

cargo-license = "0.6.1"
mockito = "1.4.0"
tokio = { version = "1.13", features = ["rt-multi-thread", "macros"] }
env_logger = "0.11.3"
anyhow = "1.0.32"
html-escape = "0.2"
